<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Signupscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signinback"
    tools:context=".SignUpActivity">

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#EDEDED"
        android:text="@string/create_account"
        android:textColor="#404040"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/create_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etUniqueId"
        app:layout_constraintStart_toStartOf="@+id/etUniqueId"
        app:layout_constraintTop_toBottomOf="@+id/etUniqueId"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etUniqueId"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/create_your_unique_id"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@+id/etEmail"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>